filedecks_archive/python/tutorial/introduction/31 Using Python as a Calculator/312 Strings/gists/-prefix--Py
-prefix-
# name: >>> prefix = 'Py'
>> 
>>> prefix = 'Py'
>>> prefix 'thon'  # can't concatenate a variable and a string literal
  File "<stdin>", line 1
    prefix 'thon'
                ^
SyntaxError: invalid syntax
>>> ('un' * 3) 'ium'
  File "<stdin>", line 1
    ('un' * 3) 'ium'
                   ^
SyntaxError: invalid syntax